syntax = "proto3";

package receiptpb.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/meesooqa/cheque/api/pb/receiptpb/v1;receiptpb";

message Model {
  uint64 id = 1;
  string external_identifier = 2;
  google.protobuf.Timestamp date_time = 3;
  string operator = 4;
  uint64 seller_place_id = 5;
  string fiscal_document_number = 6;
  string fiscal_drive_number = 7;
  string fiscal_sign = 8;
  int32 sum = 9;
  string kkt_reg = 10;
  string buyer_phone_or_address = 11;
  string comment = 12;
}

message GetListRequest {
  int32 page_size = 1;
  int32 page = 2;
  string sort_by = 3;
  string sort_order = 4;
  // filters
  string external_identifier = 5;
  google.protobuf.Timestamp date_time_start = 6;
  google.protobuf.Timestamp date_time_end = 7;
  string operator = 8;
  uint64 seller_place_id = 9;
  string fiscal_document_number = 10;
  string fiscal_drive_number = 11;
  string fiscal_sign = 12;
  int32 sum_gt = 13;
  int32 sum_lt = 14;
  string kkt_reg = 15;
  string buyer_phone_or_address = 16;
  string comment = 17;
}

message GetListResponse {
  int64 total = 1;
  repeated Model items = 2;
}

message GetItemRequest {
  uint64 id = 1;
}

message GetItemResponse {
  Model item = 1;
}

message CreateItemRequest {
  Model item = 1;
}

message CreateItemResponse {
  Model item = 1;
}

message UpdateItemRequest {
  uint64 id = 1;
  Model item = 2;
}

message UpdateItemResponse {
  Model item = 1;
}

message DeleteItemRequest {
  uint64 id = 1;
}

message DeleteItemResponse {
}

service ModelService {
  rpc GetList (GetListRequest) returns (GetListResponse) {
    option (google.api.http) = {
      get: "/api/v1/receipts"
    };
  }
  rpc GetItem (GetItemRequest) returns (GetItemResponse) {
    option (google.api.http) = {
      get: "/api/v1/receipts/{id}"
    };
  }
  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/receipts"
      body: "item"
    };
  }
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/receipts/{id}"
      body: "item"
      additional_bindings {
        patch: "/api/v1/receipts/{id}"
        body: "item"
      }
    };
  }
  rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse) {
    option (google.api.http) = {
      delete: "/api/v1/receipts/{id}"
    };
  }
}
